<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraint_main_menu"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".MainMenuFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        >
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:id="@+id/mainMenuLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            android:orientation="vertical"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mainMenuButtonReq"
                android:text="@string/main_menu_button_request_str"
                app:icon="@drawable/request_icon"
                style="@style/Widget.MaterialComponents.Button.MainMenuButton"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mainMenuButtonProfile"
                android:text="@string/main_menu_button_profile_str"
                app:icon="@drawable/profile_icon"
                style="@style/Widget.MaterialComponents.Button.MainMenuButton"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/mainMenuButtonProfileTimetable"
                android:text="@string/main_menu_button_timetable_str"
                app:icon="@drawable/transport_icon"
                style="@style/Widget.MaterialComponents.Button.MainMenuButton"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/mainMenuButtonFaq"
                android:text="@string/main_menu_button_faq_str"
                app:icon="@drawable/faq_icon"
                style="@style/Widget.MaterialComponents.Button.MainMenuButton"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/mainMenuButtonGovernment"
                android:text="@string/main_menu_button_government_str"
                app:icon="@drawable/government_icon"
                style="@style/Widget.MaterialComponents.Button.MainMenuButton"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/mainMenuButtonStats"
                android:text="@string/main_menu_button_stats_str"
                app:icon="@drawable/stats_icon"
                style="@style/Widget.MaterialComponents.Button.MainMenuButton"
                />
        </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainMenuLayout">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/vk" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="35dp"
            android:src="@drawable/instagram" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="35dp"
            android:src="@drawable/telegram_plane" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="35dp"
            android:src="@drawable/globe_europe" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/develop_by"
        android:textAppearance="@style/TextAppearance.AppCompat.InactiveText"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

