<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/constraint"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainMenuFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:orientation="vertical">

        <EditText
            android:id="@+id/inputTitle"
            style="@style/TextInputStyle.Unfocused"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/input_title_hint_application_form_page"
            android:inputType="text" />

        <com.google.android.material.button.MaterialButton
            style="@style/Select"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="@string/categories_select_button_application_form_page" />

        <com.google.android.material.button.MaterialButton
            style="@style/Select"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="@string/coordinates_select_button_application_form_page" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/description"
                style="@style/TextInputStyle.Description"
                android:layout_width="250dp"
                android:layout_height="150dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textAlignment="textStart"
                android:paddingBottom="34dp" />

            <ImageView
                android:id="@+id/addContent"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/plus_circle"
                app:layout_constraintBottom_toBottomOf="@+id/description"
                app:layout_constraintStart_toStartOf="@+id/description" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <HorizontalScrollView
            android:layout_marginTop="10dp"
            android:layout_width="250dp"
            android:layout_height="50dp">

            <LinearLayout
                android:id="@+id/contentList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />
        </HorizontalScrollView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:fontFamily="@font/lato"
            android:textColor="@color/black"
            android:text="@string/use_draft_button_str_application_form_page" />
    </LinearLayout>


    <CheckBox
        android:id="@+id/rules_check_box"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:letterSpacing="0.2"
        android:text="@string/rules_familiar_application_form_page"
        android:textAlignment="textStart"
        android:textColor="@color/inactive_dark"
        app:layout_constraintBottom_toTopOf="@+id/buttonArchive"
        app:layout_constraintEnd_toEndOf="@+id/buttonArchive"
        app:layout_constraintStart_toStartOf="@+id/buttonArchive" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonArchive"
        android:layout_width="280dp"
        android:layout_height="60dp"
        style="@style/Widget.MaterialComponents.Button.ButtonPattern"
        android:text="@string/create_button_str_application_form_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>