<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:id="@+id/mainMenuLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:orientation="vertical"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mainMenuButtonReq"
            android:layout_width="280dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/secondary"
            android:fontFamily="@font/oswald"
            android:text="@string/main_menu_button_request_str"
            app:cornerRadius="20dp"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp"
            app:icon="@drawable/request_icon"
            app:iconSize="35dp"
            android:paddingEnd="60dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mainMenuButtonProfile"
            android:layout_width="280dp"
            android:layout_height="60dp"
            app:cornerRadius="20dp"
            android:fontFamily="@font/oswald"
            android:text="@string/main_menu_button_profile_str"
            android:backgroundTint="@color/secondary"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp"
            app:icon="@drawable/profile_icon"
            app:iconSize="35dp"
            android:paddingEnd="60dp"

            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/mainMenuButtonProfileTimetable"
            android:layout_width="280dp"
            android:layout_height="60dp"
            app:cornerRadius="20dp"
            android:fontFamily="@font/oswald"
            android:text="@string/main_menu_button_timetable_str"
            android:backgroundTint="@color/secondary"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp"
            app:icon="@drawable/transport_icon"
            app:iconSize="35dp"
            android:paddingEnd="60dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/mainMenuButtonFaq"
            android:layout_width="280dp"
            android:layout_height="60dp"
            app:cornerRadius="20dp"
            android:fontFamily="@font/oswald"
            android:text="@string/main_menu_button_faq_str"
            android:backgroundTint="@color/secondary"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp"
            app:icon="@drawable/faq_icon"
            app:iconSize="35dp"
            android:paddingEnd="60dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/mainMenuButtonGovernment"
            android:layout_width="280dp"
            android:layout_height="60dp"
            app:cornerRadius="20dp"
            android:fontFamily="@font/oswald"
            android:text="@string/main_menu_button_government_str"
            android:backgroundTint="@color/secondary"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp"
            app:icon="@drawable/government_icon"
            app:iconSize="35dp"
            android:paddingEnd="60dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/mainMenuButtonStats"
            android:layout_width="280dp"
            android:layout_height="60dp"
            app:cornerRadius="20dp"
            android:fontFamily="@font/oswald"
            android:text="@string/main_menu_button_stats_str"
            android:backgroundTint="@color/secondary"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp"
            app:icon="@drawable/stats_icon"
            app:iconSize="35dp"
            android:paddingEnd="60dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainMenuLayout"
        >
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/vk"
            />
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/instagram"
            android:layout_marginLeft="35dp"
            />
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/telegram_plane"
            android:layout_marginLeft="35dp"
            />
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/globe_europe"
            android:layout_marginLeft="35dp"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>